	* il_dds-save.c (ilCompressDXT): Added this function.
	* il.h: Removed ilNVidiaCompressDXT and ilSquishCompressDXT - moved to il_internal.h.
	* il_dds-save.c:151: Changed to Faces from Images.
	* il_dds-save.c (CompressTo565): Added IL_ALPHA case.
	* Updated DevIL Manual with new DXTC information.

2009-02-01 Denton Woods <doomwiz@users.sf.net>
	* devil_internal_exports.h: Commented members of ILimage struct using Doxygen-style comments.
	  Removed deprecated, commented-out members (NumNext, NumLayers, NumMips).
	* Updated several functions with appropriate Doxygen comments.
	* il.h: Updated IL_XXX file format defines with Doxygen comments.
	* ilu_rotate.c: Changed min/max calls to IL_MIN/IL_MAX.
	* ilut_states.c (ilutSetInteger): Fixed ILUT_MAXTEX_DEPTH call and added checks around first
	  three calls for Param >= 1.
	
2009-02-01 Matěj Týč <bubla@sf.net>
	* test/format_test: Tweaked the script to use wine if cross-compiling
	to run the tests, extended testil capabilities
	* m4/devil-definitions.m4: Fixed bugs that caused that you couldn't
	disable support for some formats no matter what :-)
	* m4/devil-api-checks.m4: Added Xrender build support (by Jesse Maurais)

2009-02-02 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c (ilCopyPixels):311: Added check for destination format of color index.
	* il_convbuff.c (ilConvertBuffer): Changed to accept the source image palette.  Added code to
	  convert from buffers that are related to a palette before the large switch.
	* il_alloc.c (ifree): Changed so that if Ptr == NULL, it does not try to free the pointer.
	* il_nvidia.cpp/il_squish.cpp: Added empty functions if nVidia or libsquish support is not
	  compiled in.
	* test/format_test/testil.c:5: Added _USE_MATH_DEFINES.

2009-02-03 Denton Woods <doomwiz@users.sf.net>
	* il_io.c: Updated Doxygen comments.
	* il_fits.c: Added this file (not in any projects yet).
	* il_fits.c: Wrote beginning of FITS loading code.
	