@@ -246,6 +246,9 @@ ILboolean ilLoadExrL(const void *Lump, ILuint Size);
 ILboolean ilSaveExr(ILconst_string FileName);
 ILuint    ilSaveExrF(ILHANDLE File);
 ILuint    ilSaveExrL(void *Lump, ILuint Size);
+ILboolean ilLoadFits(ILconst_string FileName);
+ILboolean ilLoadFitsF(ILHANDLE File);
+ILboolean ilLoadFitsL(const void *Lump, ILuint Size);
 ILboolean ilIsValidGif(ILconst_string FileName);
 ILboolean ilIsValidGifF(ILHANDLE File);
 ILboolean ilIsValidGifL(const void *Lump, ILuint Size);
